<resources>
    <string name="app_name">HealthAI</string>
    <string name="createProfile">Create Profile</string>
    <string name="modifyProfile">Modify Profile</string>
    <string name="login">Login</string>
    <string name="homeButtonDescription">Home</string>
    <string name="calories_tracker">Calories Tracker</string>
    <string name="exercise_tracker">Exercise Tracker</string>
    <string name="step_counter">Step Counter</string>
    <string name="calories_calculation">Calories Calculation</string>
    <string name="heartbeat_rate_tracker">Pulse Detector</string>
    <string name="data_summary">Data Summary</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="input_food_info">Input food info:</string>
    <string name="input_exercise_info">Input exercise info:</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="food_name">Food Name:</string>
    <string name="intensity">Intensity</string>
    <string name="time_spent">Time Spent:</string>
    <string name="calories_burnt">Calories Burnt:</string>
    <string name="calories_value">Calories Value:</string>
    <string name="caloriesTrackerAddButton">Add</string>
    <string name="caloriesTackerCaloriesHint">Calories(kcal)</string>
    <string name="CaloriesTrackerFoodName">Name</string>
    <string name="view_exercise_record">View Exercise Record</string>
    <string name="exerciseTraining">Exercise Training</string>
    <string name="output_hint">
        Please place your finger on the device\'s camera, covering the flash as well. After
        10 seconds, you can export the results through the menu.
        \n\nThis utility works by measuring the amount of red it sees through the camera, and
        attempting to detect the fluctuations.
        \nIt works better in a darkened room, and when the pressure on the camera is constant.
        \nIf there are multiple cameras on your device, make sure that your finger covers the entire
        field of view in the small viewfinder.
        \nOnce the measurement is complete, it can be exported or repeated through the menu.
    </string>
    <string name="output_header_template">Heart rate on %s</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="send_output_to">Send output to:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="noFlashWarning">Measurement without flash is less reliable.</string>
    <string name="new_measurement">New Measurement</string>
    <string name="export_result">Export Result</string>
    <string name="export_details">Export Details</string>
    <string name="dateFormat">yyyy-MM-dd\'T\'HH:mm:ssZZZZZ</string>
    <string name="dateFormatGranular">yyyy-MM-dd\'T\'HH:mm:ss.SSSZZZZZ</string>
    <string name="camera_not_found">Camera not available.</string>
    <string name="view_calories_record">View Calories Record</string>
    <string name="create_profile">Create Profile</string>
    <string name="guest">Guest</string>
    <string name="healthai">HealthAI</string>
    <plurals name="measurement_output_template">
        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
    </plurals>
    <string name="next_button_text">Next</string>
    <string name="elevate_your_workout_experience">Elevate Your Workout Experience</string>
    <string name="empower_your_fitness_journey">Empower Your Fitness Journey</string>
    <string name="counting_made_easier">Counting made easier</string>
    <string name="hassle_free_repetition_tracking">Hassle-Free Repetition Tracking</string>
    <string name="kick_start">Kick start your journey by crafting a tailored workout plan that suits your needs and goals</string>
    <string name="create_a_workout">Create a workout plan to stay fit</string>
    <string name="next_onboarding">Next</string>
    <string name="get_started">Get Started</string>
    <string name="mixed_text">20 <font fgcolor="#A9A9A9">x 3</font></string>
    <string name="there_is_no_plan_set_at_the_moment">There is no plan set at the moment</string>
    <string name="exercise_left">%d exercise left</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_barcode_scanning" translatable="false">Barcode Scanning</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_title_pose_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode" translatable="false">lppdpm</string>
    <string name="pref_key_still_image_pose_detection_performance_mode" translatable="false">sipdpm</string>
    <string name="pref_entries_pose_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="pref_entries_pose_detector_performance_mode_accurate" translatable="false">Accurate</string>
    <string name="pref_entry_values_pose_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_pose_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_pose_detector_prefer_gpu" translatable="false">Prefer using GPU</string>
    <string name="pref_key_pose_detector_prefer_gpu" translatable="false">pdpg</string>
    <string name="pref_summary_pose_detector_prefer_gpu" translatable="false">If enabled, GPU will be used as long as it is available, stable and returns correct results. In this case, the detector will not check if GPU is really faster than CPU.</string>
    <string name="pref_title_pose_detector_show_in_frame_likelihood" translatable="false">Show in-frame likelihood</string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood" translatable="false">lppdsifl</string>
    <string name="pref_key_still_image_pose_detector_show_in_frame_likelihood" translatable="false">sipdsifl</string>
    <string name="pref_title_pose_detector_visualize_z" translatable="false">Visualize z value</string>
    <string name="pref_key_pose_detector_visualize_z" translatable="false">pdvz</string>
    <string name="pref_title_pose_detector_rescale_z" translatable="false">Rescale z value for visualization</string>
    <string name="pref_key_pose_detector_rescale_z" translatable="false">pdrz</string>
    <string name="pref_title_pose_detector_run_classification" translatable="false">Run Classification</string>
    <string name="pref_key_pose_detector_run_classification" translatable="false">pdrc</string>
    <string name="pref_summary_pose_detector_run_classification" translatable="false">Classify squat and pushup poses. Count reps in streaming mode. To get the best classification results based on the current sample data, face the camera side way and make sure your full body is in the frame.</string>
    <string name="pref_title_segmentation_raw_size_mask" translatable="false">Enable raw size mask</string>
</resources>