<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthai"
            android:textSize="60sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/CreateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_profile"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/primaryReversed"/>

        </LinearLayout>

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryReversed"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryReversed"
            android:text="@string/guest"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </LinearLayout>

</RelativeLayout>