<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.function_views.ExerciseTracker">

    <include
        android:id="@+id/create_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_exercise_info"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exercise_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/CaloriesTrackerFoodName"
                    android:textSize="20sp"
                    android:textColorHint="@color/hintcolor"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/intensity"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <RadioGroup
                    android:id="@+id/intensityRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonLight"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="Light" />

                    <RadioButton
                        android:id="@+id/radioButtonModerate"
                        android:layout_width="46dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Moderate" />

                    <RadioButton
                        android:id="@+id/radioButtonVigorous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Vigorous" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_spent"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/DurationEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Duration (mins)"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calories_burnt"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/CaloriesEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/caloriesTackerCaloriesHint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/exerciseAddButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/caloriesTrackerAddButton"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
</LinearLayout>